# timbre

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  package.json  pnpm-lock.yaml  requirements.txt  turbo.json
.github/: pull_request_template.md
apps/backend/: .env.example  .gitignore  Dockerfile  Makefile  environment_variables.md  main.py  package.json  pyproject.toml  requirements.txt  samconfig.toml  template.yaml  template.yaml.sample
apps/backend/models/: chat_message_config.py  frame.py  global_config.py  llm_response.py  lyria_config.py  realtime_llm_response.py
apps/backend/service/: lyria.py  redis_service.py
apps/backend/service/auth/: auth_service.py  dependencies.py
apps/backend/service/global_eval/: global_eval_service.py
apps/backend/service/lyria/: lyria_service.py
apps/backend/service/realtime_eval/: realtime_eval_service.py
apps/backend/shared/: commands.py  logging.py
apps/backend/src/lambdas/api/create_upload_url/: app.py
apps/backend/src/lambdas/api/get_job_status/: app.py
apps/backend/src/lambdas/api/get_user_jobs/: app.py
apps/backend/src/lambdas/api/submit_job/: app.py
apps/backend/src/lambdas/steps/analyzer/: app.py
apps/backend/src/lambdas/steps/audio_generator/: app.py  deploy-musicgen-large.ipynb
apps/backend/src/lambdas/steps/av_operator/: app.py
apps/backend/src/lambdas/steps/coordinator/: app.py
apps/backend/src/lambdas/steps/failure_handler/: app.py
apps/backend/src/lambdas/submit_job/: app.py
apps/backend/src/state_machine/: workflow.asl.json
apps/backend/tests/: test_websocket_connection.py
apps/backend/utils/: commands.py  logging.py
apps/backend/utils/audio/: audio_utils.py
apps/backend/utils/helper/: helper_utils.py
apps/backend/utils/llm/: chat_history.py  global_llm_utils.py  llm_utils.py  llm_validators.py  prompts.py  realtime_llm_utils.py
apps/backend/utils/video/: video_utils.py
(+129 files in other folders)
