[project]
name = "timbre-backend"
version = "0.1.0"
description = "Backend service for Timbre - AI-powered video analysis and frame extraction"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "redis>=5.0.0",
    "fastapi[all]>=0.121.1",
    "google-genai>=1.50.0",
    "groq>=0.34.1",
    "opencv-python>=4.12.0.88",
    "pillow>=12.0.0",
    "pyaudio>=0.2.14",
    "python-dotenv>=1.2.1",
    "scenedetect>=0.6.7.1",
    "uvicorn>=0.38.0",
    "websockets>=13.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "black>=25.11.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
]

[tool.coverage.run]
source = ["utils", "models", "shared", "service"]
omit = [
    "tests/*",
    "*/migrations/*",
    "*/__pycache__/*",
    "*/.venv/*",
]

[tool.coverage.report]
show_missing = true
precision = 2
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
]
